--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
+    "date-fns": "2.30.0",
+    "framer-motion": "^12.23.24",
+    "lucide-react": "0.294.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "6.20.1",
-    "lucide-react": "0.294.0",
-    "date-fns": "2.30.0"
+    "recharts": "^3.3.0",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@types/react": "18.2.37",
@@ -32,5 +35,3 @@
     "vite": "4.5.14"
   }
 }
-
-
