--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
+    "aws-amplify": "^6.15.8",
     "date-fns": "2.30.0",
     "framer-motion": "^12.23.24",
     "lucide-react": "0.294.0",
@@ -20,6 +21,7 @@
     "zustand": "^5.0.8"
   },
   "devDependencies": {
+    "@aws-amplify/cli": "^14.2.3",
     "@types/react": "18.2.37",
     "@types/react-dom": "18.2.15",
     "@typescript-eslint/eslint-plugin": "5.62.0",
