--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "date-fns": "2.30.0",
     "framer-motion": "^12.23.24",
     "lucide-react": "0.294.0",
+    "oidc-client-ts": "^3.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-oidc-context": "^3.3.0",
     "react-router-dom": "6.20.1",
     "recharts": "^3.3.0",
     "zustand": "^5.0.8"
